# robot-i-ros2

./: .gitignore  Dockerfile  DockerfileJazzy  README.md  compose.yaml  compose_all.yaml  docker-compose.yaml
old/sweep_ros/launch/: pointcloud2laser_launch.py  sweep2laser_launch.py  sweep_launch.py
old/sweep_ros/src/: node.cpp
requirements/: system-requirements.txt
scripts/: run_mapping.bash  setup_navigation.bash  start_mapping.bash  start_navigation.bash  tmux-loc-nav-irobot.bash
src/create_description/: CMakeLists.txt  package.xml
src/create_description/urdf/: create_2.urdf
src/roomba_bringup/: CMakeLists.txt  package.xml
src/roomba_bringup/config/: create_default.yaml  nav2_param.yaml
src/roomba_bringup/launch/: create_2.launch  roomba_launch.py
src/roomba_navigation/: CMakeLists.txt  package.xml
src/roomba_navigation/config/: amcl_config.yaml  ekf.yaml  map_config.yaml  nav2_config.yaml  roomba_config.yaml
src/roomba_navigation/launch/: roomba_all.launch.py  roomba_amcl.launch.py  roomba_map_server.launch.py  roomba_move_base.launch.py  roomba_move_base.py  roomba_move_base_new.launch.py  roomba_navigation.launch.py  roomba_robot_localization.launch.py  roomba_robot_localization.py  roomba_rviz.launch.py  roomba_sensors_static_transforms.py  roomba_sensors_static_transforms_launch.py  test_robot_localization.py
src/roomba_navigation/map/: bed_room.pgm  bed_room.yaml  house.pgm  house.yaml  house_mettmanner.pgm  house_mettmanner.yaml  house_mettmanner_2.pgm  house_mettmanner_2.yaml  house_mettmanner_3.pgm  house_mettmanner_3.yaml  house_mettmanner_4.pgm  house_mettmanner_4.yaml  house_mettmanner_5.pgm  house_mettmanner_5.yaml  house_mettmanner_6.pgm  house_mettmanner_6.yaml  new_house.pgm  new_house_updated.pgm  new_house_updated.yaml  room_updated.pgm  room_updated.yaml  room_updated_2.pgm  roomba_world.pgm  roomba_world.yaml
src/roomba_navigation/param/: ekf.yaml
src/roomba_navigation/rviz/: urdf_config.rviz
src/sweep_ros/: CMakeLists.txt  package.xml
src/sweep_ros/launch/: pointcloud2laser_launch.py  sweep2laser_launch.py
src/sweep_ros/src/: node.cpp
